# Image

./: .gitignore  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cartoon-sim.param
app/src/main/java/com/example/image/: MainActivity.kt  MainViewModel.kt  MyApplication.kt  NcnnBodyseg.java  NcnnCartoon.java  NcnnUtils.java  Repository.kt
app/src/main/java/com/example/image/model/: Photo.kt  Record.kt
app/src/main/java/com/example/image/network/: Api.kt  MyRetrofit.kt  Network.kt  Response.kt  TestService.kt
app/src/main/java/com/example/image/room/: AppDatabase.kt  PhotoDao.kt  RecordDao.kt
app/src/main/java/com/example/image/ui/: MainActivity.kt  MainActivity2.kt  MainViewModel.kt  PhotoAdapter.kt  ProcessFragment.kt  ProcessViewModel.kt  SecondActivity.kt  SecondViewModel.kt
app/src/main/java/com/example/image/util/: BitmapUtil.kt
app/src/main/jni/: CMakeLists.txt  cartoondet.cpp  cartoondet.h  cartoonncnn.cpp  nanodet.cpp  nanodet.h  nanodetncnn.cpp
app/src/main/res/layout/: activity_add.xml  activity_main.xml  activity_main2.xml  activity_second.xml  fragment_display.xml  fragment_home.xml  fragment_process.xml  home_lr.xml  item.xml  item_test.xml  photo_item.xml  process_lr.xml
app/src/main/res/menu/: bottom_nav.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
